<package>
  <name>auv_control</name>
  <version>0.0.1</version>
  <description>auv_control</description>
  <maintainer email="stwirth@uib.es">Stephan Wirth</maintainer>
  <maintainer email="miquel.massot@uib.es">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/auv_control</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="stwirth@uib.es">Stephan Wirth</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auv_control_msgs</build_depend> 
  <build_depend>dynamic_reconfigure</build_depend> 
  <build_depend>rospy</build_depend> 
  <build_depend>driver_base</build_depend> 
  <build_depend>std_srvs</build_depend> 
  <build_depend>auv_sensor_msgs</build_depend>
  <run_depend>auv_control_msgs</run_depend> 
  <run_depend>dynamic_reconfigure</run_depend> 
  <run_depend>rospy</run_depend> 
  <run_depend>driver_base</run_depend> 
  <run_depend>std_srvs</run_depend> 
  <run_depend>auv_sensor_msgs</run_depend>
  <!-- <test_depend>auv_control_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>driver_base</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>auv_sensor_msgs</test_depend> -->

  <export>

  </export>
</package>