<package>
  <name>auv_framework</name>
  <version>0.0.1</version>
  <description>Stack</description>
  <maintainer email="stwirth@uib.es">Stephan Wirth</maintainer>
  <maintainer email="miquel.massot@uib.es">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/auv_framework</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="stwirth@uib.es">Stephan Wirth</author>
  <author email="miquel.massot@uib.es">Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>auv_navigation</run_depend>
  <run_depend>auv_teleoperation</run_depend>
  <run_depend>auv_sensor_msgs</run_depend>
  <run_depend>auv_control</run_depend>
  <run_depend>auv_control_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
