<package>
  <name>auv_navigation</name>
  <version>0.0.1</version>
  <description>auv_navigation</description>
  <maintainer email="stwirth@uib.es">Stephan Wirth</maintainer>
  <maintainer email="miquel.massot@uib.es">Miquel Massot</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/auv_navigation</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="stwirth@uib.es">Stephan Wirth</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auv_control_msgs</build_depend>
  <run_depend>auv_control_msgs</run_depend>
  <!-- <test_depend>auv_control_msgs</test_depend> -->

  <export>

  </export>
</package>